添加图片资源

--- a/easyrecord_frm.html
+++ b/easyrecord_frm.html
@@ -71,6 +71,25 @@
 		<script type="text/javascript">
 			mui.init();
 			
+			// 首页返回按钮处理
+			mui.back = function(){
+				var first = null;
+                plus.key.addEventListener('backbutton', function() {
+                    //首次按键，提示‘再按一次退出应用’
+                    if (!first) {
+                        first = new Date().getTime();
+                        mui.toast('再按一次退出应用');
+                        setTimeout(function() {
+                            first = null;
+                        }, 1000);
+                    } else {
+                        if (new Date().getTime() - first < 1000) {
+                            plus.runtime.quit();
+                        }
+                    }
+                }, false);
+            }
+			
 			// 为li绑定点击事件
 			var lis = document.getElementsByTagName("li");
 			for (var i=0;i<lis.length;i++) {
