--- a/settings_frm.html
+++ b/settings_frm.html
@@ -42,6 +42,25 @@
 		<script type="text/javascript">
 			mui.init();
 			
+			// 首页返回按钮处理
+			mui.back = function(){
+				var first = null;
+                plus.key.addEventListener('backbutton', function() {
+                    //首次按键，提示‘再按一次退出应用’
+                    if (!first) {
+                        first = new Date().getTime();
+                        mui.toast('再按一次退出应用');
+                        setTimeout(function() {
+                            first = null;
+                        }, 1000);
+                    } else {
+                        if (new Date().getTime() - first < 1000) {
+                            plus.runtime.quit();
+                        }
+                    }
+                }, false);
+            }
+			
 			document.addEventListener("plusready",function(){
 				var user = plus.storage.getItem("username");
 				var login = plus.storage.getItem("login");
